Javadoc fixes and additions.